ECシステム完成版に差し替え